Sun May 15 14:35:46 2005  Tanaka Akira  <akr@m17n.org>

	* lib/pathname.rb (Pathname#unlink): unlink a symlink to a directory
	  was failed.  [ruby-core:4992]

Sun May 15 09:57:30 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (unixtime_to_filetime): deal with DST.
	  [ruby-talk:141817]

Sat May 14 23:59:11 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (exc_exception, {exit,name_err,syserr}_initialize): call
	  Execption#initialize.  fixed: [ruby-talk:142593]

Sat May 14 23:56:41 2005  Erik Huelsmann  <ehuels@gmail.com>

	* configure.in: Check for the availability of pid_t, gid_t and uid_t and
	  remove AC_TYPE_UID_T.  fixed: [ruby-core:04745]

	* defines.h: Remove pid_t typedef.

	* ruby.h: Define rb_pid_t, rb_gid_t and rb_uid_t in accordance with
	 the available system types.

	* process.c: Change instances of pid_t and gid_t to their rb_*
	 counterparts.

	* ext/pty/pty.c: Change pid_t to rb_pid_t.

	* vms/config.h: Define HAVE_{P,G,U}ID_T to 1.

	* win32/Makefile.sub: Remove #define for {g,u}id_t.

	* win32/win32.c: Change pid_t to rb_pid_t.

	* wince/Makefile.sub: Remove #define for {g,u}id_t.

	* wince/sys/types.h: Remove definitions of {p,g,u}id_t.

Sat May 14 11:47:57 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* intern.h (ruby_pragma): prototype.  [ruby-core:04881]

	* parse.y (parser_pragma): parse Emacsen hack.

	* parse.y (parser_prepare): deal with specific syntax at the top.

	* ruby.c (load_file): read the first line iff it started with shebang.

Fri May 13 23:44:22 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: keep srcdir unexpanded.

	* lib/mkmf.rb (create_makefile): quote topdir and hdrdir if necessary.
	  fixed: [ruby-core:04932]

	* lib/mkmf.rb (configuration), {bcc32,win32,wince}/Makefile.sub: make
	  also INSTALL_PROG and INSTALL_DATA system dependent.
	  fixed: [ruby-core:04931]

Fri May 13 23:32:55 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
